[gd_scene load_steps=9 format=3 uid="uid://tnoaa2ktceu3"]

[ext_resource type="Script" path="res://menus/level_select.gd" id="1_folko"]
[ext_resource type="Theme" path="res://menus/title.tres" id="2_hehf2"]
[ext_resource type="Texture2D" uid="uid://cb7ot5abnye5n" path="res://art/background/Green.png" id="3_w0g5c"]
[ext_resource type="Texture2D" uid="uid://c0ji1sh25eyiy" path="res://art/menu/levels/01.png" id="4_jvb2c"]
[ext_resource type="Texture2D" uid="uid://0ap65vhd1s1j" path="res://art/menu/levels/02.png" id="5_kfgch"]
[ext_resource type="Texture2D" uid="uid://c52elq6oy8fjs" path="res://art/menu/buttons/Back.png" id="6_eikek"]
[ext_resource type="Texture2D" uid="uid://cqekykq3rd00u" path="res://art/menu/levels/03.png" id="6_ix1rx"]
[ext_resource type="AudioStream" uid="uid://d0xiyyvgna8v0" path="res://sounds/menu_theme.mp3" id="7_x7fxl"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_folko")

[node name="Title" type="RichTextLabel" parent="."]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -139.0
offset_right = 346.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hehf2")
bbcode_enabled = true
text = "[center]LEVELS[/center]"

[node name="Background" type="TextureRect" parent="."]
z_index = -1
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_w0g5c")
stretch_mode = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -15.0
offset_right = 211.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Level 1" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Level 1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_jvb2c")
stretch_mode = 5

[node name="Level 2" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Level 2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_kfgch")
stretch_mode = 5

[node name="Level 3" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Level 3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ix1rx")
stretch_mode = 5

[node name="Back" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons/Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_eikek")
stretch_mode = 5

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-130, -109)
stream = ExtResource("7_x7fxl")
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="Buttons/Level 1" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Buttons/Level 2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Buttons/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_back_pressed"]
